[package]
name = "sip"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
memmap2 = "0.9.5"
once_cell = "1.21.3"
rayon = "1.10.0"



[profile.release]
# Release profile optimizations
opt-level = 3  
debug = false  
panic = "abort" 
lto = true 
strip = true
debug-assertions =false
rpath = false
codegen-units = 1
overflow-checks = false
